--- a/app/src/main/res/layout/activity_volunteer_main.xml
+++ b/app/src/main/res/layout/activity_volunteer_main.xml
@@ -1,53 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:background="#FFFFFF"
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/tv_volunteer_welcome"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Панель волонтера"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="50dp" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tv_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ожидание запросов о помощи..."
-        android:textSize="18sp"
-        android:layout_marginBottom="30dp" />
+        <TextView
+            android:id="@+id/tv_volunteer_welcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Панель волонтера"
+            android:textSize="@dimen/header_text_size"
+            android:textStyle="bold"
+            android:textColor="#007AFF"
+            android:layout_marginBottom="40dp"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/tv_info"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Вы получите уведомление, когда кому-то потребуется ваша помощь."
-        android:textAlignment="center"
-        android:layout_marginBottom="50dp" />
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ожидание запросов о помощи..."
+            android:textSize="@dimen/normal_text_size"
+            android:textColor="#000000"
+            android:layout_marginBottom="30dp"
+            android:gravity="center" />
 
-    <Button
-        android:id="@+id/btn_start_call"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:text="Тестовый вызов"
-        android:textSize="22sp"
-        android:backgroundTint="#007AFF"
-        android:textColor="#FFFFFF"
-        android:layout_gravity="center" />
+        <TextView
+            android:id="@+id/tv_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Вы получите уведомление, когда кому-то потребуется ваша помощь."
+            android:textAlignment="center"
+            android:textSize="@dimen/normal_text_size"
+            android:layout_marginBottom="60dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp" />
 
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:text="Выйти"
-        android:textSize="22sp"
-        android:backgroundTint="#F44336"
-        android:textColor="#FFFFFF"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp" />
-</LinearLayout>
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Выйти"
+            android:textSize="@dimen/button_text_size"
+            android:backgroundTint="#F44336"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="center"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:padding="16dp" />
+    </LinearLayout>
+</ScrollView>
