--- a/app/src/main/res/layout/activity_user_main.xml
+++ b/app/src/main/res/layout/activity_user_main.xml
@@ -20,8 +20,15 @@
             android:textSize="@dimen/header_text_size"
             android:textStyle="bold"
             android:textColor="#007AFF"
-            android:layout_marginBottom="@dimen/large_margin"
+            android:layout_marginBottom="@dimen/standard_margin"
             android:gravity="center" />
+
+        <include
+            android:id="@+id/statistics_view"
+            layout="@layout/statistics_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/large_margin" />
 
         <Button
             android:id="@+id/btn_request_help"
@@ -44,7 +51,7 @@
             android:textSize="@dimen/button_text_size"
             android:backgroundTint="#F44336"
             android:textColor="#FFFFFF"
-            android:layout_gravity="center" 
+            android:layout_gravity="center"
             android:layout_marginStart="@dimen/standard_margin"
             android:layout_marginEnd="@dimen/standard_margin" />
     </LinearLayout>
